--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     </div>
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
+        <div class="optimization-management-marketing">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        <div  class="optimization-management-marketing">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
@@ -49,7 +49,7 @@
         </div>
     </div>
     <div class="benefits">
-        <div class="benefit1">
+        <div class="benefit">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
